Upgrades git ignore

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn ts:check && lint-staged && yarn build && git add ."
+      "pre-commit": "yarn ts:check && lint-staged"
     }
   },
   "lint-staged": {
