--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "next-routes-with-locale",
-  "version": "2.0.0",
+  "name": "@join-com/next-routes-with-locale",
+  "version": "1.0.0",
   "description": "Easy to use locale-based dynamic routes for Next.js",
   "repository": "",
   "main": "lib/index.js",
