--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "prepare": "yarn build",
     "prepublishOnly": "yarn test && yarn lint",
-    "preversion": "npm lint",
+    "preversion": "npm run lint",
     "version": "yarn prettier && git add -A src",
     "postversion": "git push && git push --tags",
     "lint": "tslint -c tslint.json 'src/**/*.ts' 'src/**/*.tsx'",
