--- a/package.json
+++ b/package.json
@@ -37,25 +37,25 @@
     "path-to-regexp": "^2.4.0"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.9",
-    "@types/next": "^7.0.5",
-    "@types/react": "^16.7.7",
-    "@types/react-test-renderer": "^16.0.3",
-    "del-cli": "^1.1.0",
-    "husky": "^1.2.0",
-    "jest": "^23.6.0",
-    "lint-staged": "^8.1.0",
-    "next": "^7.0.2",
-    "prettier": "^1.15.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-test-renderer": "^16.6.3",
-    "ts-jest": "^23.10.5",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.16.0",
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.6.8",
+    "@types/react": "^16.8.23",
+    "@types/react-test-renderer": "^16.8.2",
+    "del-cli": "^2.0.0",
+    "husky": "^3.0.1",
+    "jest": "^24.8.0",
+    "lint-staged": "^9.2.0",
+    "next": "^9.0.2",
+    "prettier": "^1.18.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-test-renderer": "^16.8.6",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.18.0",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.1.6"
+    "typescript": "^3.5.3"
   },
   "author": "JOIN",
   "license": "MIT"
